fix: csv export rows (#336)
* fix: export csv

* fix: organization filename export csv